# auto-subtitles

./: .env.example  .flake8  .gitignore  404.html  README.MD  coverage.xml  index.html  mkdocs.yml  pyproject.toml  search.html  tox.ini
Home/: index.html
search/: search_index.json
src/: cli.py  main.py
test/: test_aai.py  test_ffmpeg.py  test_main.py
test/data/: subtitles.srt
