[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-subtitles"
authors = [
  { name="Gheorghe Andrei", email="gheorgheandrei13@gmail.com" },
]
description = "A small example package"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.7"',
    "streamlit",
    "ffmpeg-python",
    "pytest"
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test*"]
namespaces = false
[tool.hatch]
